init fearure-average-scores api
