# server/endpoints/DataFeatureAverageScoresEndpoint.py
@@ -1,0 +1,28 @@
+import logging
+from flask import Blueprint, request, jsonify, make_response
+
+from src.adv_xai_fulfilment.presentation.DataPresentations import DataPresentations
+
+featureAverageScoresBp = Blueprint("data-features-average-scores", __name__)
+
+
+@featureAverageScoresBp.route("/data-features-average-scores", methods=["POST"])
+def FeatureAverageScoreEndpoint():
+    if request.method != "POST":
+        return "Not a valid request"
+
+    data: dict = request.get_json()
+    logging.info(f"called /data-features-average-scores api with params {data}")
+    try:
+        response: dict = DataPresentations().get_features_average_scores(
+            model_filename=data.get("model"),
+            meta_data_filename=data.get("meta_data"),
+            pilot=data.get("pilot"),
+        )
+        return make_response(
+            jsonify(response),
+            200,
+        )
+    except Exception as e:
+        logging.error(f"error while data-features-average-scores: {e}")
+        return make_response(jsonify({"status": str(e)}), 500)
